# vocode-core

./: README.md  pyproject.toml
apps/langchain_agent/: main.py
apps/langchain_agent/tools/: contacts.py  vocode.py  word_of_the_day.py
apps/telegram_bot/: main.py
docs/open-source/: using-synthesizers.mdx
tests/fakedata/: conversation.py
tests/streaming/synthesizer/: test_factory.py
vocode/streaming/action/: end_conversation.py
vocode/streaming/client_backend/: conversation.py
vocode/streaming/livekit/: constants.py
vocode/streaming/models/: audio.py  events.py  synthesizer.py
vocode/streaming/synthesizer/: azure_synthesizer.py  base_synthesizer.py  default_factory.py  play_ht_synthesizer.py  play_ht_synthesizer_v2.py
vocode/streaming/telephony/: constants.py
vocode/streaming/utils/: __init__.py
vocode/turn_based/synthesizer/: play_ht_synthesizer.py
vocode/utils/: sentry_utils.py
