[tool.poetry]
name = "vocode"
version = "0.1.114a2"
description = "The all-in-one voice SDK"
authors = ["Ajay Raj <ajay@vocode.dev>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/vocodedev/vocode-python"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "^3.11.11"
anthropic = "^0.43.1"
azure-cognitiveservices-speech = "^1.42.0"
elevenlabs = "^1.50.3"
fastapi = "^0.115.6"
janus = "^2.0.0"
jinja2 = "^3.1.5"
jsonschema = "^4.23.0"
loguru = "^0.7.3"
miniaudio = "^1.61.0"
numpy = "^2.2.2"
openai = "^1.59.8"
opentelemetry-sdk = "^1.29.0"
phonenumbers = "^8.13.53"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
pydub = "^0.25.1"
# pyht = "^0.1.10"
redis = "^5.2.1"
requests = "^2.32.3"
sentry-sdk = { extras = ["fastapi"], version = "^2.20.0" }
sounddevice = "^0.5.1"
tiktoken = "^0.8.0"
uvicorn = "^0.34.0"
websockets = "^14.2"
nltk = "^3.9.1"

# LLM Providers
groq = { version = "^0.15.0", optional = true }

# Synthesizers
google-cloud-texttospeech = { version = "^2.24.0", optional = true }
pvkoala = { version = "^2.0.3", optional = true }
cartesia = {version = "^1.3.1", optional = true}

# Transcribers
google-cloud-speech = { version = "^2.30.0", optional = true }

# Telephony
twilio = { version = "^9.4.3", optional = true }
vonage = { version = "^4.2.0", optional = true }

# Langchain
# langchain = { version = "0.3.14", optional = true }
# langchain-community = { version = "^0.3.14", optional = true }
# langchain-openai = { version = "^0.3.0", optional = true }
# langchain-anthropic = { version = "^0.3.1", optional = true }
# langchain-google-vertexai = { version = "^2.0.11", optional = true }

# LiveKit
livekit = { version = "^0.19.1", optional = true }
langfuse = "^2.57.10"
python-multipart = "^0.0.20"
scipy = "^1.15.1"

[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[tool.poetry.group.typing.dependencies]
mypy = "^1.14.1"
pydub-stubs = "^0.25.1.5"
types-redis = "^4.6.0.20241004"
types-regex = "^2024.11.6.20241221"
types-requests = "^2.32.0.20241016"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.8"
coverage = "^7.6.10"
fakeredis = "^2.26.2"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
pytest-env = "^1.1.5"
pytest-httpx = "^0.35.0"
pytest-mock = "^3.14.0"

[tool.poetry.extras]
synthesizers = [
    "google-cloud-texttospeech",
    "pvkoala",
    "cartesia",
]
transcribers = ["google-cloud-speech"]
telephony = ["twilio", "vonage"]
langchain = ["langchain", "langchain-community"]
langchain-extras = ["langchain-openai", "langchain-anthropic", "langchain-google-vertexai"]
all = [
    "google-cloud-texttospeech",
    "pvkoala",
    "google-cloud-speech",
    "twilio",
    "vonage",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-vertexai",
    "cartesia",
    "groq",
    "livekit"
]

[tool.mypy]
ignore_missing_imports = true
exclude = ["venv", ".venv"]
explicit_package_bases = true


[tool.pytest.ini_options]
addopts = "--basetemp=/tmp/pytest"
testpaths = ["tests"]

[tool.pytest_env]
ENVIRONMENT = "test"
AZURE_OPENAI_API_BASE_EAST_US = "https://api.openai.com"
AZURE_OPENAI_API_KEY_EAST_US = "test"


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
